Fixed a bug when REST service fails